crates/klyric-preview/check_error_2.txt
    Checking klyric-renderer v0.1.0 (D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer)
warning: unused imports: `Matrix` and `Path`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\particle_system.rs:2:45
  |
2 | use skia_safe::{Canvas, Color, Paint, Rect, Matrix, Path, Point, Image, BlendMode as SkBlendMode};
  |                                             ^^^^^^  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ImageFilter`, `Image`, `Matrix`, `Path`, `Point`, and `Rect`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:2:39
  |
2 | use skia_safe::{Canvas, Color, Paint, Rect, Matrix, Path, Point, Image, Surface, BlendMode, PaintStyle, MaskFilter, BlurStyle, ImageFilter};
  |                                       ^^^^  ^^^^^^  ^^^^  ^^^^^  ^^^^^                                                         ^^^^^^^^^^^

warning: unused imports: `Paint` and `Surface`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\mod.rs:6:17
  |
6 | use skia_safe::{Surface, Canvas, Color, Paint, ImageInfo, ColorType, AlphaType, surfaces};
  |                 ^^^^^^^                 ^^^^^

warning: unused import: `Point`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:4:59
  |
4 | use skia_safe::{Font, Typeface, FontMgr, FontStyle, Data, Point, Path};
  |                                                           ^^^^^

warning: use of deprecated associated function `skia_safe::surface::<impl skia_safe::RCHandle<skia_bindings::SkSurface>>::new_raster_n32_premul`: use surfaces::raster_n32_premul()
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:354:62
    |
354 |                          if let Some(mut surface) = Surface::new_raster_n32_premul((capture_w, capture_h)) {
    |                                                              ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

error[E0308]: mismatched types
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\mod.rs:84:31
   |
84 |         self.render_to_canvas(surface.canvas(), doc, time)?;
   |              ---------------- ^^^^^^^^^^^^^^^^ types differ in mutability
   |              |
   |              arguments to this method are incorrect
   |
   = note: expected mutable reference `&mut skia_safe::Canvas`
                      found reference `&skia_safe::Canvas`
note: method defined here
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\mod.rs:42:12
   |
42 |     pub fn render_to_canvas(&mut self, canvas: &mut Canvas, doc: &KLyricDocumentV2, time: f64) -> Result<()> {
   |            ^^^^^^^^^^^^^^^^            -------------------

warning: unused variable: `idx`
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:48:14
   |
48 |         for (idx, glyph) in glyphs.iter().enumerate() {
   |              ^^^ help: if this is intentional, prefix it with an underscore: `_idx`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `tx`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:357:34
    |
357 | ...                   let tx = (capture_w as f32 / 2.0) - cx;
    |                           ^^ help: if this is intentional, prefix it with an underscore: `_tx`

warning: unused variable: `ty`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:358:34
    |
358 | ...                   let ty = (capture_h as f32 / 2.0) - cy; // - bounds.top?
    |                           ^^ help: if this is intentional, prefix it with an underscore: `_ty`

warning: unused variable: `glyph_id`
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:87:13
   |
87 |         let glyph_id = font.unichar_to_glyph(ch as i32);
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_glyph_id`

warning: unused variable: `family`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:130:27
    |
130 |     pub fn find_font_file(family: &str) -> Option<PathBuf> {
    |                           ^^^^^^ help: if this is intentional, prefix it with an underscore: `_family`

For more information about this error, try `rustc --explain E0308`.
warning: `klyric-renderer` (lib) generated 10 warnings
error: could not compile `klyric-renderer` (lib) due to 1 previous error; 10 warnings emitted
